<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/barra_oscura"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_especialidad"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text_2" />
    </LinearLayout>
    <TextView
        android:id="@+id/lblDetalle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/margin_1"
        android:layout_marginRight="@dimen/margin_1"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingRight="@dimen/margin_1"
        android:minHeight="@dimen/dimen_3"
        android:background="@drawable/barra_oscura_media"
        android:text="@string/str_especialidad"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:textColorTertiary"
        android:textSize="@dimen/text_2"
        android:textStyle="bold" />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barra_oscura"
        android:layout_marginLeft="@dimen/margin_1"
        android:layout_marginRight="@dimen/margin_1"
        android:padding="@dimen/dimen_1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="right|center"
            android:paddingRight="@dimen/margin_1"
            android:minHeight="@dimen/dimen_3"
            android:background="@drawable/barra_clara"
            android:text="@string/str_hora_inicio"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblInicio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1"
            android:minHeight="@dimen/dimen_3"
            android:background="@drawable/barra"
            android:text="@string/str_hora_inicio"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barra_oscura"
        android:layout_marginLeft="@dimen/margin_1"
        android:layout_marginRight="@dimen/margin_1"
        android:padding="@dimen/dimen_1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="right|center"
            android:paddingRight="@dimen/margin_1"
            android:minHeight="@dimen/dimen_3"
            android:background="@drawable/barra_clara"
            android:text="@string/str_hora_fin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblFin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1"
            android:minHeight="@dimen/dimen_3"
            android:background="@drawable/barra"
            android:text="@string/str_hora_fin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barra_oscura"
        android:layout_marginLeft="@dimen/margin_1"
        android:layout_marginRight="@dimen/margin_1"
        android:padding="@dimen/dimen_1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="right|center"
            android:paddingRight="@dimen/margin_1"
            android:minHeight="@dimen/dimen_3"
            android:background="@drawable/barra_clara"
            android:text="@string/str_atencion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblAtencion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1"
            android:minHeight="@dimen/dimen_3"
            android:background="@drawable/barra"
            android:text="@string/str_atencion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:gravity="center"
        android:background="@color/gris_oscuro"
        android:layout_marginTop="@dimen/dimen_1"
        android:layout_marginBottom="@dimen/dimen_1"
        android:orientation="vertical"/>

</LinearLayout>